# gui-for-linux-wallpaperengine

./: .gitignore  ANALYSIS_NOTES.md  CHANGELOG.md  CHANGELOG_ZH.md  PKGBUILD  README.md  README_ZH.md  TESTING_AND_RELEASE_PLAN.md  build_appimage.sh  development-log-2026-01-21.md  linuxdeploy-plugin-gtk.sh  pyproject.toml  test_gif.py  test_gif_loader.py  wallpaper-gui.desktop  wallpaper_gui.py
.github/workflows/: release.yml
docs/: ADVANCED.md  ADVANCED_ZH.md  COMPATIBILITY.md  COMPATIBILITY_ZH.md  PACKAGING.md  TROUBLESHOOTING.md  TROUBLESHOOTING_ZH.md  docs-terms.md
docs/reference_doc/: ANALYSIS_INDEX.md  PROCESS_MONITORING_ANALYSIS.md  QUICK_REFERENCE.md
environment_test/: 01_测试矩阵.md  02_测试检查清单.md  03_测试结果记录表.md  04_问题追踪表.md  TEST_ENVIRONMENTS.md  测试策略.md
py_GUI/: const.py  utils.py
py_GUI/core/: config.py  controller.py  history.py  integrations.py  performance.py  properties.py  screen.py  updater.py  wallpaper.py
py_GUI/ui/: app.py  compact_window.py  tray.py  tray_process.py
py_GUI/ui/components/: animated_preview.py  dialogs.py  history_dialog.py  navbar.py  nickname_manager_dialog.py  sidebar.py  sparkline.py  welcome_dialog.py
py_GUI/ui/pages/: performance.py  settings.py  wallpapers.py
py_GUI/utils/: environment.py  path_manager.py
scripts/: QUICKSTART.md  README.md  build-appimage.sh
tests/: test_appimage_specific.py
tools/: icon_generator.py
